--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+--1.1.2--
+Uaine.Objects dependency updated to 1.11 from 1.7
+min Net Standard now 1.3 from 1
+added a general MakeBuffer method that uses the base NextBytes for a set buffer length
+
 --1.1.1--
 Uaine.Objects dependency updated to 1.7
 
